--- a/workshop3.html
+++ b/workshop3.html
@@ -98,6 +98,10 @@ function exercise32() {
 
 <!--Exercise 4 in workshop3 copy-->
 
+<!--Exercise 5 in bottom of Html-->
+
+<!--Exercise 6 in bottom of Html-->
+
 </script>
 
 <h1>Workshop 3: JavaScript Events</h1>
@@ -187,7 +191,7 @@ var persons = ["Nyssa P. Skinner", "593-4241 Lacus, St.","Cape Verde",
 </xmp>
 </ul>
 
-<h2 onmouseover="exercise2()", onmouseout="-()">Exercise 2</h2>
+<h2 onmouseover="exercise2()", onmouseout="byebye()">Exercise 2</h2>
 
 <ul>
   <li>Add an&nbsp;onMouseOver event on the&nbsp;Heading "Exercise 2" of this page.&nbsp;It should&nbsp;fire when the users mouse is moved
@@ -216,7 +220,7 @@ achieved using addEventListener() -function, <a target="_blank" href="https://ww
 
 <h2>Exercise 5</h2>
 
-<div id="coordinates"></div>
+<div id="coordinates" onmousemove="exercise5(event)"></div>
 
 <p>Add onMouseMove -event to the DIV-element above. When you move mouse over the DIV (rectangle) the program should output the coordinates of your pointer. Try first 
 outputting to the console using console.log. <p>HINT. When the event occurs, call for a method showXY(event); Then in the actual method you can output data from the 
@@ -225,9 +229,9 @@ mouse event using event.clientX and event.clientY variables. Study the event obj
 document.getElementById("coordinates").innerHTML to achieve this.
 
 <H2>Exercise 6</h2>
-<button>Get location</button> 
+<button onclick="exercise6()">Get location</button> 
 <button>Show location</button> 
-
+<p id="mycoords"></p>
 <li>The first button should check <a href="https://www.w3schools.com/html/html5_geolocation.asp">Geolocation</a> of the user, and output it to the console and to the 
 page. Note: Some browsers might not allow you to do this. Try different browsers if you get errors.</li>
 <li>
@@ -235,4 +239,30 @@ The second button should show your location on a Google Maps. You can see the ma
 "https://maps.googleapis.com/maps/api/staticmap?center="+latlon+"&zoom=14&size=400x300&sensor=false" where latlon is your latitude + longitute data separated by 
 comma (,).
 </li>
+<script>
+<!--Exercise 5-->
+function exercise5(e) {
+   var x = e.clientX;
+   var y = e.clientY;
+   var coor = "<h2>Coordinates: (" + x + "," + y + ")</h2>";
+   document.getElementById("coordinates").innerHTML = coor;
+}
+
+<!--Exercise 6-->
+var x = document.getElementById("mycoords");
+
+function exercise6() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else {
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+function showPosition(position) {
+  x.innerHTML = "Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude;
+  console.log("Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude);
+}
+</script>
 </html>
